connecting things together
