# docs/swagger.json
@@ -102,6 +102,43 @@
                 }
             }
         },
+        "/v1/vc/pom/{tokenId}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a Proof of Movement VC for a given token Id of a vehicle NFT.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VINVC"
+                ],
+                "summary": "Create POM VC",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "token Id of the vehicle NFT",
+                        "name": "tokenId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controllers_httphandlers.getPOMVCResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/vc/status/{group}": {
             "get": {
                 "description": "Get the VC status for a given status group (currently this is just the vehcilesTokenId)",
@@ -319,6 +356,20 @@
                     "items": {
                         "$ref": "#/definitions/github_com_DIMO-Network_attestation-api_pkg_verifiable.MultiKey"
                     }
+                }
+            }
+        },
+        "internal_controllers_httphandlers.getPOMVCResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "vcQuery": {
+                    "type": "string"
+                },
+                "vcUrl": {
+                    "type": "string"
                 }
             }
         },
